--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>
 		Thank You Indonesia for 11 months of clean air!
 	</title>
+	<style>
+		body {
+			font-family: "Comic Sans MS", "Comic Sans", sans-serif;
+		}
+	</style>
 </head>
 <body>
 
