--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
 	<title>
 		Thank You Indonesia for 11 months of clean air!
+		<input type="image" name="imgbtn" src="https://images-na.ssl-images-amazon.com/images/I/61QKhYL%2BeCL.png"  alt="Thank Button">
 	</title>
-	<style>
-		body {
-			font-family: "Comic Sans MS", "Comic Sans", sans-serif;
-		}
-	</style>
 </head>
 <body>
 
