--- a/index.html
+++ b/index.html
@@ -1,16 +1,246 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>
-		Thank You Indonesia for 11 months of clean air!
-	</title>
-	<style>
-		body {
-			font-family: "Comic Sans MS", "Comic Sans", sans-serif;
-		}
-	</style>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="">
+<!--<![endif]-->
+
+<head><script src="//archive.org/includes/analytics.js?v=cf34f82" type="text/javascript"></script>
+<script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app103.us.archive.org';v.server_ms=478;archive_analytics.send_pageview({});});</script><script type="text/javascript" src="/_static/js/ait-client-rewrite.js" charset="utf-8"></script>
+<script type="text/javascript">
+WB_wombat_Init("https://web.archive.org/web/", "20180317152411", "thankyouindoforthecleanair.com");
+</script>
+<script type="text/javascript" src="/_static/js/wbhack.js" charset="utf-8"></script>
+<script type="text/javascript">
+__wbhack.init('https://web.archive.org/web');
+</script>
+<link rel="stylesheet" type="text/css" href="/_static/css/banner-styles.css" />
+<link rel="stylesheet" type="text/css" href="/_static/css/iconochive.css" />
+<!-- End Wayback Rewrite JS Include -->
+
+  <meta charset="utf-8">
+  <base href="/web/20180317152411/http://thankyouindoforthecleanair.com/">
+  <title>Thank You Indonesia for 11 months of clean air!</title>
+  <meta name="description" content="">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta property="og:title" content="Thank You Indonesia for 11 months of clean air!">
+  <meta property="og:site_name" content="Thank You Indonesia for 11 months of clean air!">
+  <meta property="og:url" content="https://web.archive.org/web/20180317152411/http://thankyouindoforthecleanair.com/">
+  <meta property="og:description" content="I have thanked Indonesia for the clean air. Have you? #ThankYouIndo">
+  <meta property="og:image" content="https://web.archive.org/web/20180317152411im_/http://thankyouindoforthecleanair.com/images/fb-image.jpg">
+  <meta property="og:type" content="website">
+
+  <link rel="stylesheet" href="/web/20180317152411cs_/http://thankyouindoforthecleanair.com/styles/main.e1364332.css">
 </head>
-<body>
+
+<body ng-app="thankYouIndo"><!-- BEGIN WAYBACK TOOLBAR INSERT -->
+<script type="text/javascript" src="/_static/js/timestamp.js" charset="utf-8"></script>
+<script type="text/javascript" src="/_static/js/graph-calc.js" charset="utf-8"></script>
+<script type="text/javascript" src="/_static/js/auto-complete.js" charset="utf-8"></script>
+<script type="text/javascript" src="/_static/js/toolbar.js" charset="utf-8"></script>
+<style type="text/css">
+body {
+  margin-top:0 !important;
+  padding-top:0 !important;
+  /*min-width:800px !important;*/
+}
+.wb-autocomplete-suggestions {
+    text-align: left; cursor: default; border: 1px solid #ccc; border-top: 0; background: #fff; box-shadow: -1px 1px 3px rgba(0,0,0,.1);
+    position: absolute; display: none; z-index: 2147483647; max-height: 254px; overflow: hidden; overflow-y: auto; box-sizing: border-box;
+}
+.wb-autocomplete-suggestion { position: relative; padding: 0 .6em; line-height: 23px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 1.02em; color: #333; }
+.wb-autocomplete-suggestion b { font-weight: bold; }
+.wb-autocomplete-suggestion.selected { background: #f0f0f0; }
+</style>
+<div id="wm-ipp-base" lang="en" style="display:none;direction:ltr;">
+<div id="wm-ipp" style="position:fixed;left:0;top:0;right:0;">
+<div id="wm-ipp-inside">
+  <div style="position:relative;">
+    <div id="wm-logo" style="float:left;width:130px;padding-top:10px;">
+      <a href="/web/" title="Wayback Machine home page"><img src="/_static/images/toolbar/wayback-toolbar-logo.png" alt="Wayback Machine" width="110" height="39" border="0" /></a>
+    </div>
+    <div class="r" style="float:right;">
+      <div id="wm-btns" style="text-align:right;height:25px;">
+                  <div id="wm-save-snapshot-success">success</div>
+          <div id="wm-save-snapshot-fail">fail</div>
+          <a href="#"
+             onclick="__wm.saveSnapshot('http://thankyouindoforthecleanair.com/', '20180317152411')"
+             title="Share via My Web Archive"
+             id="wm-save-snapshot-open"
+          >
+            <span class="iconochive-web"></span>
+          </a>
+          <a href="https://archive.org/account/login.php"
+             title="Sign In"
+             id="wm-sign-in"
+          >
+            <span class="iconochive-person"></span>
+          </a>
+          <span id="wm-save-snapshot-in-progress" class="iconochive-web"></span>
+        	<a href="http://faq.web.archive.org/" title="Get some help using the Wayback Machine" style="top:-6px;"><span class="iconochive-question" style="color:rgb(87,186,244);font-size:160%;"></span></a>
+	<a id="wm-tb-close" href="#close" onclick="__wm.h(event);return false;" style="top:-2px;" title="Close the toolbar"><span class="iconochive-remove-circle" style="color:#888888;font-size:240%;"></span></a>
+      </div>
+      <div id="wm-share" style="text-align:right;">
+	<a href="#" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=https://web.archive.org/web/20180317152411/http://thankyouindoforthecleanair.com/', '', 'height=400,width=600'); return false;" title="Share on Facebook" style="margin-right:5px;" target="_blank"><span class="iconochive-facebook" style="color:#3b5998;font-size:160%;"></span></a>
+	<a href="#" onclick="window.open('https://twitter.com/intent/tweet?text=https://web.archive.org/web/20180317152411/http://thankyouindoforthecleanair.com/&amp;via=internetarchive', '', 'height=400,width=600'); return false;" title="Share on Twitter" style="margin-right:5px;" target="_blank"><span class="iconochive-twitter" style="color:#1dcaff;font-size:160%;"></span></a>
+      </div>
+    </div>
+    <table class="c" style="">
+      <tbody>
+	<tr>
+	  <td class="u" colspan="2">
+	    <form target="_top" method="get" action="/web/submit" name="wmtb" id="wmtb"><input type="text" name="url" id="wmtbURL" value="http://thankyouindoforthecleanair.com/" onfocus="this.focus();this.select();" /><input type="hidden" name="type" value="replay" /><input type="hidden" name="date" value="20180317152411" /><input type="submit" value="Go" /></form>
+	  </td>
+	  <td class="n" rowspan="2" style="width:110px;">
+	    <table>
+	      <tbody>
+		<!-- NEXT/PREV MONTH NAV AND MONTH INDICATOR -->
+		<tr class="m">
+		  <td class="b" nowrap="nowrap"><a href="https://web.archive.org/web/20170920053811/http://thankyouindoforthecleanair.com/" title="20 Sep 2017"><strong>Sep</strong></a></td>
+		  <td class="c" id="displayMonthEl" title="You are here: 15:24:11 Mar 17, 2018">MAR</td>
+		  <td class="f" nowrap="nowrap"><a href="https://web.archive.org/web/20181226064030/http://thankyouindoforthecleanair.com/" title="26 Dec 2018"><strong>Dec</strong></a></td>
+		</tr>
+		<!-- NEXT/PREV CAPTURE NAV AND DAY OF MONTH INDICATOR -->
+		<tr class="d">
+		  <td class="b" nowrap="nowrap"><a href="https://web.archive.org/web/20170920053811/http://thankyouindoforthecleanair.com/" title="05:38:11 Sep 20, 2017"><img src="/_static/images/toolbar/wm_tb_prv_on.png" alt="Previous capture" width="14" height="16" border="0" /></a></td>
+		  <td class="c" id="displayDayEl" style="width:34px;font-size:24px;white-space:nowrap;" title="You are here: 15:24:11 Mar 17, 2018">17</td>
+		  <td class="f" nowrap="nowrap"><a href="https://web.archive.org/web/20181226064030/http://thankyouindoforthecleanair.com/" title="06:40:30 Dec 26, 2018"><img src="/_static/images/toolbar/wm_tb_nxt_on.png" alt="Next capture" width="14" height="16" border="0" /></a></td>
+		</tr>
+		<!-- NEXT/PREV YEAR NAV AND YEAR INDICATOR -->
+		<tr class="y">
+		  <td class="b" nowrap="nowrap"><a href="https://web.archive.org/web/20161202043436/http://thankyouindoforthecleanair.com/" title="02 Dec 2016"><strong>2016</strong></a></td>
+		  <td class="c" id="displayYearEl" title="You are here: 15:24:11 Mar 17, 2018">2018</td>
+		  <td class="f" nowrap="nowrap"><a href="https://web.archive.org/web/20190629070318/http://thankyouindoforthecleanair.com/" title="29 Jun 2019"><strong>2019</strong></a></td>
+		</tr>
+	      </tbody>
+	    </table>
+	  </td>
+	</tr>
+	<tr>
+	  <td class="s">
+	    	    <div id="wm-nav-captures">
+	      	      <a class="t" href="/web/20180317152411*/http://thankyouindoforthecleanair.com/" title="See a list of every capture for this URL">19 captures</a>
+	      <div class="r" title="Timespan for captures of this URL">31 Oct 2015 - 29 Jun 2019</div>
+	      </div>
+	  </td>
+	  <td class="k">
+	    <a href="" id="wm-graph-anchor">
+	      <div id="wm-ipp-sparkline" title="Explore captures for this URL" style="position: relative">
+		<canvas id="wm-sparkline-canvas" width="600" height="27" border="0"></canvas>
+	      </div>
+	    </a>
+	  </td>
+	</tr>
+      </tbody>
+    </table>
+    <div style="position:absolute;bottom:0;right:2px;text-align:right;">
+      <a id="wm-expand" class="wm-btn wm-closed" href="#expand" onclick="__wm.ex(event);return false;"><span id="wm-expand-icon" class="iconochive-down-solid"></span> <span style="font-size:80%">About this capture</span></a>
+    </div>
+  </div>
+    <div id="wm-capinfo" style="border-top:1px solid #777;display:none; overflow: hidden">
+            <div style="background-color:#666;color:#fff;font-weight:bold;text-align:center">COLLECTED BY</div>
+    <div style="padding:3px;position:relative" id="wm-collected-by-content">
+            <div style="display:inline-block;vertical-align:top;width:50%;">
+			<span class="c-logo" style="background-image:url(https://archive.org/services/img/webwidecrawl);"></span>
+		Organization: <a style="color:#33f;" href="https://archive.org/details/webwidecrawl" target="_new"><span class="wm-title">Internet Archive</span></a>
+		<div style="max-height:75px;overflow:hidden;position:relative;">
+	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
+	  The Internet Archive discovers and captures web pages through many different web crawls.
+
+At any given time several distinct crawls are running, some for months, and some every day or longer.
+
+View the web archive through the <a href="http://archive.org/web/web.php">Wayback Machine</a>.
+	</div>
+	      </div>
+      <div style="display:inline-block;vertical-align:top;width:49%;">
+			<span class="c-logo" style="background-image:url(https://archive.org/services/img/survey_00007)"></span>
+		<div>Collection: <a style="color:#33f;" href="https://archive.org/details/survey_00007" target="_new"><span class="wm-title">Survey Crawl Number 7</span></a></div>
+		<div style="max-height:75px;overflow:hidden;position:relative;">
+	  <div style="position:absolute;top:0;left:0;width:100%;height:75px;background:linear-gradient(to bottom,rgba(255,255,255,0) 0%,rgba(255,255,255,0) 90%,rgba(255,255,255,255) 100%);"></div>
+	  This "Survey" crawl was started on Feb. 24, 2018.<p>This crawl was run with a Heritrix setting of "maxHops=0" (URLs including their embeds)<br></p><p>Survey 7 is based on a seed list of 339,249,218 URLs which is all the URLs in the Wayback Machine that we saw a 200 response code from in 2017 based on a query we ran on Feb. 1st, 2018. &nbsp;<br></p><p>The WARC files associated with this crawl are not currently available to the general public.</p>
+	</div>
+	      </div>
+    </div>
+    <div style="background-color:#666;color:#fff;font-weight:bold;text-align:center" title="Timestamps for the elements of this page">TIMESTAMPS</div>
+    <div>
+      <div id="wm-capresources" style="margin:0 5px 5px 5px;max-height:250px;overflow-y:scroll !important"></div>
+      <div id="wm-capresources-loading" style="text-align:left;margin:0 20px 5px 5px;display:none"><img src="/_static/images/loading.gif" alt="loading" /></div>
+    </div>
+  </div></div></div></div><script type="text/javascript">
+__wm.bt(600,27,25,2,"web","http://thankyouindoforthecleanair.com/","2018-03-17",1996,"/_static/",['css/banner-styles.css','css/iconochive.css']);
+</script>
+<!-- END WAYBACK TOOLBAR INSERT -->
+  <!--[if lte IE 8]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+  <div class="container-fluid container-body">
+
+    <ui-view autoscroll="true"></ui-view>
+
+  </div>
+
+  <!-- Footer -->
+  <div ng-include="'views/footer.html'"></div>
+
+
+  <script src="/web/20180317152411js_/http://thankyouindoforthecleanair.com/scripts/vendor.30181888.js"></script>
+
+  <script src="/web/20180317152411js_/http://thankyouindoforthecleanair.com/scripts/scripts.6e0509d7.js"></script>
+  <script type="text/javascript">
+    if (typeof wabtn4fg === "undefined") {
+      wabtn4fg = 1;
+      h = document.head || document.getElementsByTagName("head")[0], s = document.createElement("script");
+      s.type = "text/javascript";
+      s.src = "scripts/whatsapp-button.js";
+      h.appendChild(s);
+    }
+  </script>
+
+  <div id="fb-root"></div>
+  <script>
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "//web.archive.org/web/20180317152411/http://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//web.archive.org/web/20180317152411/http://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-10992303-25', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
-</html>
+
+</html><!--
+     FILE ARCHIVED ON 15:24:11 Mar 17, 2018 AND RETRIEVED FROM THE
+     INTERNET ARCHIVE ON 13:23:04 Sep 11, 2019.
+     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
+
+     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
+     SECTION 108(a)(3)).
+-->
+<!--
+playback timings (ms):
+  exclusion.robots: 0.391
+  CDXLines.iter: 12.334 (3)
+  captures_list: 185.704
+  esindex: 0.012
+  load_resource: 286.868
+  RedisCDXSource: 1.771
+  LoadShardBlock: 167.925 (3)
+  PetaboxLoader3.datanode: 303.105 (5)
+  PetaboxLoader3.resolve: 126.809 (2)
+  exclusion.robots.policy: 0.372
+-->
