--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 		body {
 			font-family: "Comic Sans MS", "Comic Sans", sans-serif;
 			text-align: center;
-			border-radius: 0 !important;
+			margin: 0 !important;
 		}
 		#div1 {
 			background:url(https://i.imgur.com/XcF8GJI.gif);
 		}
+    #div1 img {
+      max-width: 200px;
+    }
 	</style>
 </head>
 <body>
 <div id="div1">
+<img src="https://i.imgur.com/a8UwikI.gif" style="margin-left:-30%">
+<img src="https://i.imgur.com/fHLHcPo.gif" style="margin-right:-30%"><br>
 	<h1 style="color:yellow">Thank You Indonesia for 11 months of clean air!</h1>
 </div>
 <script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
